Final version of the website

--- a/public/index.html
+++ b/public/index.html
@@ -241,7 +241,7 @@
             <div style="grid-column:1/-1;display:flex;gap:10px;align-items:center">
               <button class="btn" type="submit">Submit Registration</button>
               <span id="demoMsg" class="muted"></span>
-              <butt type="button" class="btn secondary" id="exportDemoCsv">Export CSV</butt
+              <button type="button" class="btn secondary" id="exportDemoCsv">Export CSV</button>
             </div>
           </form>
         </div>
