--- a/public/index.html
+++ b/public/index.html
@@ -193,11 +193,11 @@
             <table id="studentBatchTable">
               <thead>
                 <tr><th>Title</th><th>Course</th><th>Instructor</th><th>Mode</th><th>Start</th><th>Time</th></tr>
-                <tr><td>Batch 1</td><td>DSA using Python</td><td>Karan Punwatkar</td><td>Online</td><td><a href="https://meet.google.com/xyz-123-batch1" target="_blank">Join</a><td>7:00 PM - 8:00 PM</td></td></tr>
-                <tr><td>Batch 2</td><td>DSA using Python</td><td>Karan Punwatkar</td><td>Online</td><td><a href="https://meet.google.com/xyz-123-batch1" target="_blank">Join</a><td>6:00 PM - 7:00 PM</td><td></td></tr>
-                <tr><td>Batch 3</td><td>C Language for Beginners</td><td>Karan Punwatkar</td><td>Online</td><td><a href="https://meet.google.com/xyz-123-batch1" target="_blank">Join</a><td>8:00 AM - 9:00 AM</td><td></td></tr>
-                <tr><td>Batch 4</td><td>Python for Beginners</td><td>Karan Punwatkar</td><td>Online</td><td><a href="https://meet.google.com/xyz-123-batch1" target="_blank">Join</a><td>8:00 PM - 9:00 PM</td><td></td></tr>
-                <tr><td>Batch 5</td><td>Python for Beginners</td><td>Karan Punwatkar</td><td>Online</td><td><a href="https://meet.google.com/xyz-123-batch1" target="_blank">Join</a><td>9:00 PM - 10:00 PM</td><td></td></tr>
+                <tr><td>Batch 1</td><td>DSA using Python</td><td>Karan Punwatkar</td><td>Online</td><td><a href="https://meet.google.com/twt-hqxm-cic" target="_blank">Join</a><td>7:00 PM - 8:00 PM</td></td></tr>
+                <tr><td>Batch 2</td><td>DSA using Python</td><td>Karan Punwatkar</td><td>Online</td><td><a href="https://meet.google.com/twt-hqzm-cic" target="_blank">Join</a><td>6:00 PM - 7:00 PM</td><td></td></tr>
+                <tr><td>Batch 3</td><td>C Language for Beginners</td><td>Karan Punwatkar</td><td>Online</td><td><a href="https://meet.google.com/twt-hqxm-cic" target="_blank">Join</a><td>8:00 AM - 9:00 AM</td><td></td></tr>
+                <tr><td>Batch 4</td><td>Python for Beginners</td><td>Karan Punwatkar</td><td>Online</td><td><a href="https://meet.google.com/twt-hqxm-cic" target="_blank">Join</a><td>8:00 PM - 9:00 PM</td><td></td></tr>
+                <tr><td>Batch 5</td><td>Python for Beginners</td><td>Karan Punwatkar</td><td>Online</td><td><a href="https://meet.google.com/twt-hqxm-cic" target="_blank">Join</a><td>9:00 PM - 10:00 PM</td><td></td></tr>
               </thead>
               <tbody></tbody>
             </table>
