--- a/public/index.html
+++ b/public/index.html
@@ -186,8 +186,8 @@
      <!-- UPCOMING BATCHES SECTION (Publicly visible) -->
     <section id="batches">
       <div class="container">
-        <h2>Upcoming Batches</h2>
-        <p class="muted">Here are all the batches. Log in to see the details.</p>
+        <h2>Onging Batches</h2>
+        <p class="muted">Here are all the batches Schedule</p>
         <div class="card" style="padding:16px">
           <div style="overflow:auto">
             <table id="studentBatchTable">
