--- a/public/index.html
+++ b/public/index.html
@@ -155,15 +155,15 @@
         <div class="features">
           <div class="card feature">
             <h3>💬 24/7 Doubt Solving</h3>
-            <p>Get instant clarity anytime, anywhere. Our mentors are available around the clock via call or text to help you get unstuck and keep moving forward.</p>
+            <p>Get instant clarity anytime, anywhere. Our mentors are available around the clock via call or text to help you.</p>
           </div>
           <div class="card feature">
-            <h3>💻 Live Industrial Projects</h3>
-            <p>Work on industrial-level projects, not just academic problems. You'll solve daily challenges and build a portfolio of work that's ready for the job market.</p>
+            <h3>💻 Live Real-World Projects</h3>
+            <p>Work on Real-World projects, not just academic problems. You'll solve daily challenges and build a portfolio of work.</p>
           </div>
           <div class="card feature">
             <h3>📈 Weekly Progress Checks</h3>
-            <p>Stay on track with regular progress tracking. We conduct weekly tests and reviews to help you measure your growth and refine your skills in real time.</p>
+            <p>We conduct weekly tests and reviews to help you measure your growth and refine your skills in real time.</p>
           </div>
         </div>
       </div>
