--- a/public/index.html
+++ b/public/index.html
@@ -186,7 +186,7 @@
      <!-- UPCOMING BATCHES SECTION (Publicly visible) -->
     <section id="batches">
       <div class="container">
-        <h2>Onging Batches</h2>
+        <h2>Ongoing Batches</h2>
         <p class="muted">Here are all the batches Schedule</p>
         <div class="card" style="padding:16px">
           <div style="overflow:auto">
