--- a/public/index.html
+++ b/public/index.html
@@ -158,6 +158,17 @@ footer {
 .batch-card:hover {
   transform: translateY(-5px);
 }
+
+.join-btn {
+  margin-top: 8px; /* slightly smaller top margin */
+  padding: 10px 16px;
+  background: linear-gradient(135deg, #64b5f6, #22d3ee);
+  border-radius: 12px;
+  color: #0b0f19;
+  font-weight: 600;
+  text-decoration: none;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
     
   </style>
   <!-- Firebase SDKs -->
