--- a/public/index.html
+++ b/public/index.html
@@ -261,8 +261,8 @@ footer {
   <!-- UPCOMING BATCHES SECTION (Publicly visible) -->
   <section id="batches">
   <div class="container">
-    <h2>Upcoming Batches</h2>
-    <p class="muted">Check out our upcoming courses. Log in to join or get more details.</p>
+    <h2>Ongoing Batches Schedules</h2>
+    <p class="muted">Check out our Ongoing Batches Schedules. Register for Demo Lectures.</p>
     
     <div class="batches-grid">
       <div class="batch-card">
