--- a/public/index.html
+++ b/public/index.html
@@ -311,11 +311,11 @@ footer {
       </div>
 
       <div class="batch-card">
-        <h3>Batch 6</h3>
-        <p class="course">Web Development</p>
+        <h3>Demo Lectures</h3>
+        <p class="course">Data Structure & Algorithm</p>
         <p class="instructor">Instructor: Karan Punwatkar</p>
         <p class="mode">Mode: Online</p>
-        <p class="time">Coming Soon</p>
+        <p class="time">6:00pm - 7:00PM</p>
         <a href="https://meet.google.com/xyz-123-batch1" target="_blank" class="join-btn">Coming Soon</a>
       </div>
     </div>
