--- a/public/index.html
+++ b/public/index.html
@@ -271,7 +271,7 @@ footer {
         <p class="instructor">Instructor: Karan Punwatkar</p>
         <p class="mode">Mode: Online</p>
         <p class="time">7:00 PM - 8:00 PM</p>
-        <a href="https://meet.google.com/xyz-123-batch1" target="_blank" class="join-btn">Join Now</a>
+        <a href="https://meet.google.com/twt-hqxm-cic" target="_blank" class="join-btn">Join Now</a>
       </div>
 
       <div class="batch-card">
@@ -280,7 +280,7 @@ footer {
         <p class="instructor">Instructor: Karan Punwatkar</p>
         <p class="mode">Mode: Online</p>
         <p class="time">6:00 PM - 7:00 PM</p>
-        <a href="https://meet.google.com/xyz-123-batch1" target="_blank" class="join-btn">Join Now</a>
+        <a href="https://meet.google.com/twt-hqxm-cic" target="_blank" class="join-btn">Join Now</a>
       </div>
 
       <div class="batch-card">
@@ -289,7 +289,7 @@ footer {
         <p class="instructor">Instructor: Karan Punwatkar</p>
         <p class="mode">Mode: Online</p>
         <p class="time">8:00 AM - 9:00 AM</p>
-        <a href="https://meet.google.com/xyz-123-batch1" target="_blank" class="join-btn">Join Now</a>
+        <a href="https://meet.google.com/twt-hqxm-cic" target="_blank" class="join-btn">Join Now</a>
       </div>
 
       <div class="batch-card">
@@ -298,7 +298,7 @@ footer {
         <p class="instructor">Instructor: Karan Punwatkar</p>
         <p class="mode">Mode: Online</p>
         <p class="time">8:00 PM - 9:00 PM</p>
-        <a href="https://meet.google.com/xyz-123-batch1" target="_blank" class="join-btn">Join Now</a>
+        <a href="https://meet.google.com/twt-hqxm-cic" target="_blank" class="join-btn">Join Now</a>
       </div>
 
       <div class="batch-card">
@@ -307,7 +307,7 @@ footer {
         <p class="instructor">Instructor: Karan Punwatkar</p>
         <p class="mode">Mode: Online</p>
         <p class="time">9:00 PM - 10:00 PM</p>
-        <a href="https://meet.google.com/xyz-123-batch1" target="_blank" class="join-btn">Join Now</a>
+        <a href="https://meet.google.com/twt-hqxm-cic" target="_blank" class="join-btn">Join Now</a>
       </div>
 
       <div class="batch-card">
@@ -316,7 +316,7 @@ footer {
         <p class="instructor">Instructor: Karan Punwatkar</p>
         <p class="mode">Mode: Online</p>
         <p class="time">6:00pm - 7:00PM</p>
-        <a href="https://meet.google.com/xyz-123-batch1" target="_blank" class="join-btn">Coming Soon</a>
+        <a href="https://meet.google.com/twt-hqxm-cic" target="_blank" class="join-btn">Join</a>
       </div>
     </div>
   </div>
