--- a/public/index.html
+++ b/public/index.html
@@ -316,7 +316,7 @@ footer {
         <p class="instructor">Instructor: Karan Punwatkar</p>
         <p class="mode">Mode: Online</p>
         <p class="time">6:00pm - 7:00PM</p>
-        <a href="https://meet.google.com/twt-hqxm-cic" target="_blank" class="join-btn">Join</a>
+        <a href="https://meet.google.com/twt-hqxm-cic" target="_blank" class="join-btn">Join Now</a>
       </div>
     </div>
   </div>
