--- a/public/index.html
+++ b/public/index.html
@@ -169,6 +169,99 @@ footer {
   text-decoration: none;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
+    /* ===== Resources Section ===== */
+.resources-section {
+  padding: 60px 40px;
+  background: #0b0f19;
+  color: #fff;
+}
+
+.resources-section h2 {
+  font-size: 32px;
+  text-align: center;
+  margin-bottom: 12px;
+  color: #FFD700;
+}
+
+.resources-section p {
+  text-align: center;
+  color: #aaa;
+  margin-bottom: 40px;
+}
+
+/* ===== Grid Layout ===== */
+.resources-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  gap: 30px;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+/* ===== Resource Card ===== */
+.resource-card {
+  background: linear-gradient(135deg, rgba(20, 25, 45, 0.95), rgba(40, 48, 78, 0.95));
+  border-radius: 16px;
+  padding: 24px;
+  box-shadow: 0 8px 24px rgba(0,0,0,0.5);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.resource-card:hover {
+  transform: translateY(-6px);
+  box-shadow: 0 12px 28px rgba(0,0,0,0.7);
+}
+
+.resource-card h3 {
+  font-size: 22px;
+  margin-bottom: 14px;
+  color: #64b5f6;
+}
+
+.resource-card input {
+  padding: 12px;
+  border-radius: 10px;
+  border: none;
+  margin-bottom: 12px;
+  width: 100%;
+  font-size: 14px;
+}
+
+.resource-card button {
+  padding: 12px 16px;
+  border: none;
+  border-radius: 10px;
+  background: linear-gradient(135deg, #64b5f6, #22d3ee);
+  font-weight: bold;
+  cursor: pointer;
+  font-size: 15px;
+  transition: 0.3s ease;
+}
+
+.resource-card button:hover {
+  background: linear-gradient(135deg, #22d3ee, #64b5f6);
+  transform: scale(1.05);
+}
+
+.resource-card a {
+  display: inline-block;
+  margin-top: 14px;
+  color: #FFD700;
+  font-weight: bold;
+  text-decoration: none;
+  font-size: 15px;
+}
+
+.resource-card a:hover {
+  color: #fff;
+}
+
+.hidden {
+  display: none;
+}
     
   </style>
   <!-- Firebase SDKs -->
@@ -363,6 +456,34 @@ footer {
           </form>
         </div>
     </section>
+<section id="resources" class="resources-section">
+  <div class="container">
+    <h2>Student Resources</h2>
+    <p class="muted">Access course materials by entering the correct password.</p>
+
+    <div class="resource-card">
+      <h3>Module 1: Python Basics</h3>
+      <input type="password" placeholder="Enter password" id="pass1">
+      <button onclick="checkPassword('pass1', 'link1')">Access Resource</button>
+      <div id="link1" class="hidden">
+        <a href="https://drive.google.com/drive/folders/1zPitzvHWDUaIlDNSzlq5zznr6XYT9ZUH" target="_blank">Open Drive Folder</a>
+      </div>
+    </div>
+
+    <div class="resource-card">
+      <h3>Module 2: C Language</h3>
+      <input type="password" placeholder="Enter password" id="pass2">
+      <button onclick="checkPassword('pass2', 'link2')">Access Resource</button>
+      <div id="link2" class="hidden">
+        <a href="https://drive.google.com/drive/folders/1NnbM4xQs7yDK36DMM6cy3TiyJ1N5herh" target="_blank">Open Drive Folder</a>
+      </div>
+    </div>
+
+    <!-- Add more modules here -->
+  </div>
+</section>
+
+    
 
     <!-- LOGIN/AUTHENTICATION SECTION -->
     <section id="auth" style="display:none;">
