--- a/public/index.html
+++ b/public/index.html
@@ -282,6 +282,7 @@ footer {
         <li><a href="#courses">Courses</a></li>
         <li><a href="#demo">Registrations</a></li>
         <li><a href="#batches">Batches</a></li>
+        <li><a href="#resources">Resources</a></li>
         <li><a id="batchesLink" href="#batches" style="display:none;">Batches</a></li>
         <li><a id="adminLink" href="#admin" style="display:none;">Admin</a></li>
       </ul>
