--- a/public/index.html
+++ b/public/index.html
@@ -467,7 +467,7 @@ footer {
       <input type="password" placeholder="Enter password" id="pass1">
       <button onclick="checkPassword('pass1', 'link1')">Access Resource</button>
       <div id="link1" class="hidden">
-        <a href="https://drive.google.com/drive/folders/1zPitzvHWDUaIlDNSzlq5zznr6XYT9ZUH" target="_blank">Open Drive Folder</a>
+        <a href="https://drive.google.com/file/d/1ltIipPAZ8elumdvgyqKpxu8XCqL6_eXP/view?usp=sharing" target="_blank">Open Drive Folder</a>
       </div>
     </div>
 
@@ -476,7 +476,7 @@ footer {
       <input type="password" placeholder="Enter password" id="pass2">
       <button onclick="checkPassword('pass2', 'link2')">Access Resource</button>
       <div id="link2" class="hidden">
-        <a href="https://drive.google.com/drive/folders/1NnbM4xQs7yDK36DMM6cy3TiyJ1N5herh" target="_blank">Open Drive Folder</a>
+        <a href="https://drive.google.com/file/d/1PRsC6iB5kV0HF7ixvpaJ6drly34OjVxY/view?usp=sharing" target="_blank">Open Drive Folder</a>
       </div>
     </div>
 
