--- a/public/index.html
+++ b/public/index.html
@@ -463,7 +463,7 @@ footer {
     <p class="muted">Access course materials by entering the correct password.</p>
 
     <div class="resource-card">
-      <h3>Module 1: Python Basics</h3>
+      <h3>Python Modules</h3>
       <input type="password" placeholder="Enter password" id="pass1">
       <button onclick="checkPassword('pass1', 'link1')">Access Resource</button>
       <div id="link1" class="hidden">
@@ -472,7 +472,7 @@ footer {
     </div>
 
     <div class="resource-card">
-      <h3>Module 2: C Language</h3>
+      <h3>C Language Modules</h3>
       <input type="password" placeholder="Enter password" id="pass2">
       <button onclick="checkPassword('pass2', 'link2')">Access Resource</button>
       <div id="link2" class="hidden">
