--- a/public/index.html
+++ b/public/index.html
@@ -467,7 +467,7 @@ footer {
       <input type="password" placeholder="Enter password" id="pass1">
       <button onclick="checkPassword('pass1', 'link1')">Access Resource</button>
       <div id="link1" class="hidden">
-        <a href="https://drive.google.com/file/d/1CbouoMC43KGg7zyXWnNywZ2bAYOy9iKr/view?usp=sharing" target="_blank">Open Drive Folder</a>
+        <a href="https://drive.google.com/file/d/1CbouoMC43KGg7zyXWnNywZ2bAYOy9iKr/view?usp=sharing" target="_blan">Open Drive Folder</a>
       </div>
     </div>
 
