--- a/public/index.html
+++ b/public/index.html
@@ -462,25 +462,146 @@ footer {
     <h2>Student Resources</h2>
     <p class="muted">Access course materials by entering the correct password.</p>
 
-    <div class="resource-card">
-      <h3>Python Modules</h3>
-      <input type="password" placeholder="Enter password" id="pass1">
-      <button onclick="checkPassword('pass1', 'link1')">Access Resource</button>
-      <div id="link1" class="hidden">
-        <a href="https://drive.google.com/file/d/1CbouoMC43KGg7zyXWnNywZ2bAYOy9iKr/view?usp=sharing" target="_blan">Open Drive Folder</a>
-      </div>
-    </div>
+    <section id="resources" class="resources-section">
+      <div class="container">
+        <h2>Student Resources</h2>
+        <p class="muted">Access course materials by entering the correct password.</p>
 
-    <div class="resource-card">
-      <h3>C Language Modules</h3>
-      <input type="password" placeholder="Enter password" id="pass2">
-      <button onclick="checkPassword('pass2', 'link2')">Access Resource</button>
-      <div id="link2" class="hidden">
-        <a href="https://drive.google.com/file/d/1PRsC6iB5kV0HF7ixvpaJ6drly34OjVxY/view?usp=sharing" target="_blank">Open Drive Folder</a>
-      </div>
-    </div>
+        <div class="resource-card">
+          <h3>Module 1: Python</h3>
+          <input type="password" placeholder="Enter password" id="pass1">
+          <button onclick="checkPassword('pass1', 'link1')">Access Resource</button>
+          <div id="link1" class="hidden">
+            <a href="https://drive.google.com/drive/folders/1zPitzvHWDUaIlDNSzlq5zznr6XYT9ZUH" target="_blank">Open
+              Drive Folder</a>
+          </div>
+        </div>
 
-    <!-- Add more modules here -->
+        <div class="resource-card">
+          <h3>Module 2: Python</h3>
+          <input type="password" placeholder="Enter password" id="pass1">
+          <button onclick="checkPassword('pass1', 'link1')">Access Resource</button>
+          <div id="link1" class="hidden">
+            <a href="https://drive.google.com/drive/folders/1zPitzvHWDUaIlDNSzlq5zznr6XYT9ZUH" target="_blank">Open
+              Drive Folder</a>
+          </div>
+        </div>
+
+        <div class="resource-card">
+          <h3>Module 3: Python</h3>
+          <input type="password" placeholder="Enter password" id="pass1">
+          <button onclick="checkPassword('pass1', 'link1')">Access Resource</button>
+          <div id="link1" class="hidden">
+            <a href="https://drive.google.com/drive/folders/1zPitzvHWDUaIlDNSzlq5zznr6XYT9ZUH" target="_blank">Open
+              Drive Folder</a>
+          </div>
+        </div>
+
+        <div class="resource-card">
+          <h3>Module 4: Python</h3>
+          <input type="password" placeholder="Enter password" id="pass1">
+          <button onclick="checkPassword('pass1', 'link1')">Access Resource</button>
+          <div id="link1" class="hidden">
+            <a href="https://drive.google.com/drive/folders/1zPitzvHWDUaIlDNSzlq5zznr6XYT9ZUH" target="_blank">Open
+              Drive Folder</a>
+          </div>
+        </div>
+
+        <div class="resource-card">
+          <h3>Module 5: Python</h3>
+          <input type="password" placeholder="Enter password" id="pass1">
+          <button onclick="checkPassword('pass1', 'link1')">Access Resource</button>
+          <div id="link1" class="hidden">
+            <a href="https://drive.google.com/drive/folders/1zPitzvHWDUaIlDNSzlq5zznr6XYT9ZUH" target="_blank">Open
+              Drive Folder</a>
+          </div>
+        </div>
+
+        <div class="resource-card">
+          <h3>Module 1: C Language</h3>
+          <input type="password" placeholder="Enter password" id="pass2">
+          <button onclick="checkPassword('pass2', 'link2')">Access Resource</button>
+          <div id="link2" class="hidden">
+            <a href="https://drive.google.com/drive/folders/1NnbM4xQs7yDK36DMM6cy3TiyJ1N5herh" target="_blank">Open
+              Drive Folder</a>
+          </div>
+        </div>
+
+        <div class="resource-card">
+          <h3>Module 2: C Language</h3>
+          <input type="password" placeholder="Enter password" id="pass2">
+          <button onclick="checkPassword('pass2', 'link2')">Access Resource</button>
+          <div id="link2" class="hidden">
+            <a href="https://drive.google.com/drive/folders/1NnbM4xQs7yDK36DMM6cy3TiyJ1N5herh" target="_blank">Open
+              Drive Folder</a>
+          </div>
+        </div>
+
+        <div class="resource-card">
+          <h3>Module 3: C Language</h3>
+          <input type="password" placeholder="Enter password" id="pass2">
+          <button onclick="checkPassword('pass2', 'link2')">Access Resource</button>
+          <div id="link2" class="hidden">
+            <a href="https://drive.google.com/drive/folders/1NnbM4xQs7yDK36DMM6cy3TiyJ1N5herh" target="_blank">Open
+              Drive Folder</a>
+          </div>
+        </div>
+
+        <div class="resource-card">
+          <h3>Module 4: C Language</h3>
+          <input type="password" placeholder="Enter password" id="pass2">
+          <button onclick="checkPassword('pass2', 'link2')">Access Resource</button>
+          <div id="link2" class="hidden">
+            <a href="https://drive.google.com/drive/folders/1NnbM4xQs7yDK36DMM6cy3TiyJ1N5herh" target="_blank">Open
+              Drive Folder</a>
+          </div>
+        </div>
+        <div class="resource-card">
+          <h3>Module 5: C Language</h3>
+          <input type="password" placeholder="Enter password" id="pass2">
+          <button onclick="checkPassword('pass2', 'link2')">Access Resource</button>
+          <div id="link2" class="hidden">
+            <a href="https://drive.google.com/drive/folders/1NnbM4xQs7yDK36DMM6cy3TiyJ1N5herh" target="_blank">Open
+              Drive Folder</a>
+          </div>
+        </div>
+        <div class="resource-card">
+          <h3>Module 6: C Language</h3>
+          <input type="password" placeholder="Enter password" id="pass2">
+          <button onclick="checkPassword('pass2', 'link2')">Access Resource</button>
+          <div id="link2" class="hidden">
+            <a href="https://drive.google.com/drive/folders/1NnbM4xQs7yDK36DMM6cy3TiyJ1N5herh" target="_blank">Open
+              Drive Folder</a>
+          </div>
+        </div>
+        <div class="resource-card">
+          <h3>Module 7: C Language</h3>
+          <input type="password" placeholder="Enter password" id="pass2">
+          <button onclick="checkPassword('pass2', 'link2')">Access Resource</button>
+          <div id="link2" class="hidden">
+            <a href="https://drive.google.com/drive/folders/1NnbM4xQs7yDK36DMM6cy3TiyJ1N5herh" target="_blank">Open
+              Drive Folder</a>
+          </div>
+        </div>
+        <div class="resource-card">
+          <h3>Module 8: C Language</h3>
+          <input type="password" placeholder="Enter password" id="pass2">
+          <button onclick="checkPassword('pass2', 'link2')">Access Resource</button>
+          <div id="link2" class="hidden">
+            <a href="https://drive.google.com/drive/folders/1NnbM4xQs7yDK36DMM6cy3TiyJ1N5herh" target="_blank">Open
+              Drive Folder</a>
+          </div>
+        </div>
+        <div class="resource-card">
+          <h3>Module 9: C Language</h3>
+          <input type="password" placeholder="Enter password" id="pass2">
+          <button onclick="checkPassword('pass2', 'link2')">Access Resource</button>
+          <div id="link2" class="hidden">
+            <a href="https://drive.google.com/drive/folders/1NnbM4xQs7yDK36DMM6cy3TiyJ1N5herh" target="_blank">Open
+              Drive Folder</a>
+          </div>
+        </div>
+    </section>
   </div>
 </section>
 
