--- a/public/index.html
+++ b/public/index.html
@@ -477,7 +477,7 @@ footer {
           <input type="password" placeholder="Enter password" id="pass1">
           <button onclick="checkPassword('pass1', 'link1')">Access Resource</button>
           <div id="link1" class="hidden">
-            <a href="https://drive.google.com/drive/folders/1zPitzvHWDUaIlDNSzlq5zznr6XYT9ZUH" target="_blank">Open
+            <a href="https://drive.google.com/file/d/1ltIipPAZ8elumdvgyqKpxu8XCqL6_eXP/view?usp=sharing" target="_blank">Open
               Drive Folder</a>
           </div>
         </div>
@@ -487,7 +487,7 @@ footer {
           <input type="password" placeholder="Enter password" id="pass1">
           <button onclick="checkPassword('pass1', 'link1')">Access Resource</button>
           <div id="link1" class="hidden">
-            <a href="https://drive.google.com/drive/folders/1zPitzvHWDUaIlDNSzlq5zznr6XYT9ZUH" target="_blank">Open
+            <a href="https://drive.google.com/file/d/1QzZ6mNosMo2egQSgCjRLLLcPqPlE9I42/view?usp=sharing" target="_blank">Open
               Drive Folder</a>
           </div>
         </div>
@@ -497,7 +497,7 @@ footer {
           <input type="password" placeholder="Enter password" id="pass1">
           <button onclick="checkPassword('pass1', 'link1')">Access Resource</button>
           <div id="link1" class="hidden">
-            <a href="https://drive.google.com/drive/folders/1zPitzvHWDUaIlDNSzlq5zznr6XYT9ZUH" target="_blank">Open
+            <a href="https://drive.google.com/file/d/10Wh0QbCq90jsvXuj6rnGHjirP1PUUFBy/view?usp=sharing" target="_blank">Open
               Drive Folder</a>
           </div>
         </div>
@@ -507,7 +507,7 @@ footer {
           <input type="password" placeholder="Enter password" id="pass1">
           <button onclick="checkPassword('pass1', 'link1')">Access Resource</button>
           <div id="link1" class="hidden">
-            <a href="https://drive.google.com/drive/folders/1zPitzvHWDUaIlDNSzlq5zznr6XYT9ZUH" target="_blank">Open
+            <a href="https://drive.google.com/file/d/1EtniCniCAMIjoklprh0BGEuYWLkyeNCr/view?usp=sharing" target="_blank">Open
               Drive Folder</a>
           </div>
         </div>
@@ -517,7 +517,7 @@ footer {
           <input type="password" placeholder="Enter password" id="pass2">
           <button onclick="checkPassword('pass2', 'link2')">Access Resource</button>
           <div id="link2" class="hidden">
-            <a href="https://drive.google.com/drive/folders/1NnbM4xQs7yDK36DMM6cy3TiyJ1N5herh" target="_blank">Open
+            <a href="https://drive.google.com/file/d/1PRsC6iB5kV0HF7ixvpaJ6drly34OjVxY/view?usp=sharing" target="_blank">Open
               Drive Folder</a>
           </div>
         </div>
@@ -527,7 +527,7 @@ footer {
           <input type="password" placeholder="Enter password" id="pass2">
           <button onclick="checkPassword('pass2', 'link2')">Access Resource</button>
           <div id="link2" class="hidden">
-            <a href="https://drive.google.com/drive/folders/1NnbM4xQs7yDK36DMM6cy3TiyJ1N5herh" target="_blank">Open
+            <a href="https://drive.google.com/file/d/1fO9pufoWMjDG6NJlPzkPxDEkdvjMbIxf/view?usp=sharing" target="_blank">Open
               Drive Folder</a>
           </div>
         </div>
@@ -537,7 +537,7 @@ footer {
           <input type="password" placeholder="Enter password" id="pass2">
           <button onclick="checkPassword('pass2', 'link2')">Access Resource</button>
           <div id="link2" class="hidden">
-            <a href="https://drive.google.com/drive/folders/1NnbM4xQs7yDK36DMM6cy3TiyJ1N5herh" target="_blank">Open
+            <a href="https://drive.google.com/file/d/15baZ68pcNHCKip54oOKNy9ByuU-GbtEw/view?usp=sharing" target="_blank">Open
               Drive Folder</a>
           </div>
         </div>
@@ -547,7 +547,7 @@ footer {
           <input type="password" placeholder="Enter password" id="pass2">
           <button onclick="checkPassword('pass2', 'link2')">Access Resource</button>
           <div id="link2" class="hidden">
-            <a href="https://drive.google.com/drive/folders/1NnbM4xQs7yDK36DMM6cy3TiyJ1N5herh" target="_blank">Open
+            <a href="https://drive.google.com/file/d/1c6c0u8ztbps1OAG_RWWdb9y2Y7qMs_9R/view?usp=sharing" target="_blank">Open
               Drive Folder</a>
           </div>
         </div>
@@ -556,7 +556,7 @@ footer {
           <input type="password" placeholder="Enter password" id="pass2">
           <button onclick="checkPassword('pass2', 'link2')">Access Resource</button>
           <div id="link2" class="hidden">
-            <a href="https://drive.google.com/drive/folders/1NnbM4xQs7yDK36DMM6cy3TiyJ1N5herh" target="_blank">Open
+            <a href="https://drive.google.com/file/d/1CApMaJYvngFjdruzTPHxDwt9mk_LL5lW/view?usp=sharing" target="_blank">Open
               Drive Folder</a>
           </div>
         </div>
@@ -565,7 +565,7 @@ footer {
           <input type="password" placeholder="Enter password" id="pass2">
           <button onclick="checkPassword('pass2', 'link2')">Access Resource</button>
           <div id="link2" class="hidden">
-            <a href="https://drive.google.com/drive/folders/1NnbM4xQs7yDK36DMM6cy3TiyJ1N5herh" target="_blank">Open
+            <a href="https://drive.google.com/file/d/1vRS6PJjIQUdbnmVbP82OESh_znDZajwS/view?usp=sharing" target="_blank">Open
               Drive Folder</a>
           </div>
         </div>
@@ -574,7 +574,7 @@ footer {
           <input type="password" placeholder="Enter password" id="pass2">
           <button onclick="checkPassword('pass2', 'link2')">Access Resource</button>
           <div id="link2" class="hidden">
-            <a href="https://drive.google.com/drive/folders/1NnbM4xQs7yDK36DMM6cy3TiyJ1N5herh" target="_blank">Open
+            <a href="https://drive.google.com/file/d/1MuXbqqZGUW-qxtThNJS-lsk0NzhddF4q/view?usp=sharing" target="_blank">Open
               Drive Folder</a>
           </div>
         </div>
@@ -583,7 +583,7 @@ footer {
           <input type="password" placeholder="Enter password" id="pass2">
           <button onclick="checkPassword('pass2', 'link2')">Access Resource</button>
           <div id="link2" class="hidden">
-            <a href="https://drive.google.com/drive/folders/1NnbM4xQs7yDK36DMM6cy3TiyJ1N5herh" target="_blank">Open
+            <a href="https://drive.google.com/file/d/1wtk9wtB3h0jscAA1XJy-fxT5DayCq1pq/view?usp=sharing" target="_blank">Open
               Drive Folder</a>
           </div>
         </div>
@@ -592,7 +592,7 @@ footer {
           <input type="password" placeholder="Enter password" id="pass2">
           <button onclick="checkPassword('pass2', 'link2')">Access Resource</button>
           <div id="link2" class="hidden">
-            <a href="https://drive.google.com/drive/folders/1NnbM4xQs7yDK36DMM6cy3TiyJ1N5herh" target="_blank">Open
+            <a href="https://drive.google.com/file/d/12zowVlzlcCZ6e5pwpm0kRPQWc8xvgK9V/view?usp=sharing" target="_blank">Open
               Drive Folder</a>
           </div>
         </div>
