--- a/public/index.html
+++ b/public/index.html
@@ -464,7 +464,7 @@ footer {
 
         <div class="resource-card">
           <h3>Module 1: Python</h3>
-          <input type="password" placeholder="Enter password" id="pass1">
+          <input type="password" placeholder="Enter password" id="pass1-1">
           <button onclick="checkPassword('pass1', 'link1')">Access Resource</button>
           <div id="link1" class="hidden">
             <a href="https://drive.google.com/drive/folders/1zPitzvHWDUaIlDNSzlq5zznr6XYT9ZUH" target="_blank">Open
@@ -474,7 +474,7 @@ footer {
 
         <div class="resource-card">
           <h3>Module 2: Python</h3>
-          <input type="password" placeholder="Enter password" id="pass1">
+          <input type="password" placeholder="Enter password" id="pass1-2">
           <button onclick="checkPassword('pass1', 'link1')">Access Resource</button>
           <div id="link1" class="hidden">
             <a href="https://drive.google.com/file/d/1ltIipPAZ8elumdvgyqKpxu8XCqL6_eXP/view?usp=sharing" target="_blank">Open
@@ -484,7 +484,7 @@ footer {
 
         <div class="resource-card">
           <h3>Module 3: Python</h3>
-          <input type="password" placeholder="Enter password" id="pass1">
+          <input type="password" placeholder="Enter password" id="pass1-3">
           <button onclick="checkPassword('pass1', 'link1')">Access Resource</button>
           <div id="link1" class="hidden">
             <a href="https://drive.google.com/file/d/1QzZ6mNosMo2egQSgCjRLLLcPqPlE9I42/view?usp=sharing" target="_blank">Open
@@ -494,7 +494,7 @@ footer {
 
         <div class="resource-card">
           <h3>Module 4: Python</h3>
-          <input type="password" placeholder="Enter password" id="pass1">
+          <input type="password" placeholder="Enter password" id="pass1-4">
           <button onclick="checkPassword('pass1', 'link1')">Access Resource</button>
           <div id="link1" class="hidden">
             <a href="https://drive.google.com/file/d/10Wh0QbCq90jsvXuj6rnGHjirP1PUUFBy/view?usp=sharing" target="_blank">Open
@@ -504,7 +504,7 @@ footer {
 
         <div class="resource-card">
           <h3>Module 5: Python</h3>
-          <input type="password" placeholder="Enter password" id="pass1">
+          <input type="password" placeholder="Enter password" id="pass1-5">
           <button onclick="checkPassword('pass1', 'link1')">Access Resource</button>
           <div id="link1" class="hidden">
             <a href="https://drive.google.com/file/d/1EtniCniCAMIjoklprh0BGEuYWLkyeNCr/view?usp=sharing" target="_blank">Open
@@ -514,7 +514,7 @@ footer {
 
         <div class="resource-card">
           <h3>Module 1: C Language</h3>
-          <input type="password" placeholder="Enter password" id="pass2">
+          <input type="password" placeholder="Enter password" id="pass2-1">
           <button onclick="checkPassword('pass2', 'link2')">Access Resource</button>
           <div id="link2" class="hidden">
             <a href="https://drive.google.com/file/d/1PRsC6iB5kV0HF7ixvpaJ6drly34OjVxY/view?usp=sharing" target="_blank">Open
@@ -524,7 +524,7 @@ footer {
 
         <div class="resource-card">
           <h3>Module 2: C Language</h3>
-          <input type="password" placeholder="Enter password" id="pass2">
+          <input type="password" placeholder="Enter password" id="pass2-2">
           <button onclick="checkPassword('pass2', 'link2')">Access Resource</button>
           <div id="link2" class="hidden">
             <a href="https://drive.google.com/file/d/1fO9pufoWMjDG6NJlPzkPxDEkdvjMbIxf/view?usp=sharing" target="_blank">Open
@@ -534,7 +534,7 @@ footer {
 
         <div class="resource-card">
           <h3>Module 3: C Language</h3>
-          <input type="password" placeholder="Enter password" id="pass2">
+          <input type="password" placeholder="Enter password" id="pass2-3">
           <button onclick="checkPassword('pass2', 'link2')">Access Resource</button>
           <div id="link2" class="hidden">
             <a href="https://drive.google.com/file/d/15baZ68pcNHCKip54oOKNy9ByuU-GbtEw/view?usp=sharing" target="_blank">Open
@@ -544,7 +544,7 @@ footer {
 
         <div class="resource-card">
           <h3>Module 4: C Language</h3>
-          <input type="password" placeholder="Enter password" id="pass2">
+          <input type="password" placeholder="Enter password" id="pass2-4">
           <button onclick="checkPassword('pass2', 'link2')">Access Resource</button>
           <div id="link2" class="hidden">
             <a href="https://drive.google.com/file/d/1c6c0u8ztbps1OAG_RWWdb9y2Y7qMs_9R/view?usp=sharing" target="_blank">Open
@@ -553,7 +553,7 @@ footer {
         </div>
         <div class="resource-card">
           <h3>Module 5: C Language</h3>
-          <input type="password" placeholder="Enter password" id="pass2">
+          <input type="password" placeholder="Enter password" id="pass2-5">
           <button onclick="checkPassword('pass2', 'link2')">Access Resource</button>
           <div id="link2" class="hidden">
             <a href="https://drive.google.com/file/d/1CApMaJYvngFjdruzTPHxDwt9mk_LL5lW/view?usp=sharing" target="_blank">Open
@@ -562,7 +562,7 @@ footer {
         </div>
         <div class="resource-card">
           <h3>Module 6: C Language</h3>
-          <input type="password" placeholder="Enter password" id="pass2">
+          <input type="password" placeholder="Enter password" id="pass2-6">
           <button onclick="checkPassword('pass2', 'link2')">Access Resource</button>
           <div id="link2" class="hidden">
             <a href="https://drive.google.com/file/d/1vRS6PJjIQUdbnmVbP82OESh_znDZajwS/view?usp=sharing" target="_blank">Open
@@ -571,7 +571,7 @@ footer {
         </div>
         <div class="resource-card">
           <h3>Module 7: C Language</h3>
-          <input type="password" placeholder="Enter password" id="pass2">
+          <input type="password" placeholder="Enter password" id="pass2-7">
           <button onclick="checkPassword('pass2', 'link2')">Access Resource</button>
           <div id="link2" class="hidden">
             <a href="https://drive.google.com/file/d/1MuXbqqZGUW-qxtThNJS-lsk0NzhddF4q/view?usp=sharing" target="_blank">Open
@@ -580,7 +580,7 @@ footer {
         </div>
         <div class="resource-card">
           <h3>Module 8: C Language</h3>
-          <input type="password" placeholder="Enter password" id="pass2">
+          <input type="password" placeholder="Enter password" id="pass2-8">
           <button onclick="checkPassword('pass2', 'link2')">Access Resource</button>
           <div id="link2" class="hidden">
             <a href="https://drive.google.com/file/d/1wtk9wtB3h0jscAA1XJy-fxT5DayCq1pq/view?usp=sharing" target="_blank">Open
@@ -589,7 +589,7 @@ footer {
         </div>
         <div class="resource-card">
           <h3>Module 9: C Language</h3>
-          <input type="password" placeholder="Enter password" id="pass2">
+          <input type="password" placeholder="Enter password" id="pass2-9">
           <button onclick="checkPassword('pass2', 'link2')">Access Resource</button>
           <div id="link2" class="hidden">
             <a href="https://drive.google.com/file/d/12zowVlzlcCZ6e5pwpm0kRPQWc8xvgK9V/view?usp=sharing" target="_blank">Open
