--- a/public/index.html
+++ b/public/index.html
@@ -457,149 +457,141 @@ footer {
           </form>
         </div>
     </section>
-<section id="resources" class="resources-section">
+
+    <section id="resources" class="resources-section">
   <div class="container">
     <h2>Student Resources</h2>
     <p class="muted">Access course materials by entering the correct password.</p>
 
-        <div class="resource-card">
-          <h3>Module 1: Python</h3>
-          <input type="password" placeholder="Enter password" id="pass1">
-          <button onclick="checkPassword('pass1', 'link1')">Access Resource</button>
-          <div id="link1" class="hidden">
-            <a href="https://drive.google.com/drive/folders/1zPitzvHWDUaIlDNSzlq5zznr6XYT9ZUH" target="_blank">Open
-              Drive Folder</a>
-          </div>
-        </div>
+    <!-- Python Modules -->
+    <div class="resource-card">
+      <h3>Module 1: Python</h3>
+      <input type="password" placeholder="Enter password" id="pass1-1">
+      <button onclick="checkPassword('pass1-1','link1-1')">Access Resource</button>
+      <div id="link1-1" class="hidden">
+        <a href="https://drive.google.com/drive/folders/XXXX1" target="_blank">Open Drive Folder</a>
+      </div>
+    </div>
 
-        <div class="resource-card">
-          <h3>Module 2: Python</h3>
-          <input type="password" placeholder="Enter password" id="pass1">
-          <button onclick="checkPassword('pass1', 'link1')">Access Resource</button>
-          <div id="link1" class="hidden">
-            <a href="https://drive.google.com/file/d/1ltIipPAZ8elumdvgyqKpxu8XCqL6_eXP/view?usp=sharing" target="_blank">Open
-              Drive Folder</a>
-          </div>
-        </div>
+    <div class="resource-card">
+      <h3>Module 2: Python</h3>
+      <input type="password" placeholder="Enter password" id="pass1-2">
+      <button onclick="checkPassword('pass1-2','link1-2')">Access Resource</button>
+      <div id="link1-2" class="hidden">
+        <a href="https://drive.google.com/drive/folders/XXXX2" target="_blank">Open Drive Folder</a>
+      </div>
+    </div>
 
-        <div class="resource-card">
-          <h3>Module 3: Python</h3>
-          <input type="password" placeholder="Enter password" id="pass1">
-          <button onclick="checkPassword('pass1', 'link1')">Access Resource</button>
-          <div id="link1" class="hidden">
-            <a href="https://drive.google.com/file/d/1QzZ6mNosMo2egQSgCjRLLLcPqPlE9I42/view?usp=sharing" target="_blank">Open
-              Drive Folder</a>
-          </div>
-        </div>
+    <div class="resource-card">
+      <h3>Module 3: Python</h3>
+      <input type="password" placeholder="Enter password" id="pass1-3">
+      <button onclick="checkPassword('pass1-3','link1-3')">Access Resource</button>
+      <div id="link1-3" class="hidden">
+        <a href="https://drive.google.com/drive/folders/XXXX3" target="_blank">Open Drive Folder</a>
+      </div>
+    </div>
 
-        <div class="resource-card">
-          <h3>Module 4: Python</h3>
-          <input type="password" placeholder="Enter password" id="pass1">
-          <button onclick="checkPassword('pass1', 'link1')">Access Resource</button>
-          <div id="link1" class="hidden">
-            <a href="https://drive.google.com/file/d/10Wh0QbCq90jsvXuj6rnGHjirP1PUUFBy/view?usp=sharing" target="_blank">Open
-              Drive Folder</a>
-          </div>
-        </div>
+    <div class="resource-card">
+      <h3>Module 4: Python</h3>
+      <input type="password" placeholder="Enter password" id="pass1-4">
+      <button onclick="checkPassword('pass1-4','link1-4')">Access Resource</button>
+      <div id="link1-4" class="hidden">
+        <a href="https://drive.google.com/drive/folders/XXXX4" target="_blank">Open Drive Folder</a>
+      </div>
+    </div>
 
-        <div class="resource-card">
-          <h3>Module 5: Python</h3>
-          <input type="password" placeholder="Enter password" id="pass1">
-          <button onclick="checkPassword('pass1', 'link1')">Access Resource</button>
-          <div id="link1" class="hidden">
-            <a href="https://drive.google.com/file/d/1EtniCniCAMIjoklprh0BGEuYWLkyeNCr/view?usp=sharing" target="_blank">Open
-              Drive Folder</a>
-          </div>
-        </div>
+    <div class="resource-card">
+      <h3>Module 5: Python</h3>
+      <input type="password" placeholder="Enter password" id="pass1-5">
+      <button onclick="checkPassword('pass1-5','link1-5')">Access Resource</button>
+      <div id="link1-5" class="hidden">
+        <a href="https://drive.google.com/drive/folders/XXXX5" target="_blank">Open Drive Folder</a>
+      </div>
+    </div>
 
-        <div class="resource-card">
-          <h3>Module 1: C Language</h3>
-          <input type="password" placeholder="Enter password" id="pass2">
-          <button onclick="checkPassword('pass2', 'link2')">Access Resource</button>
-          <div id="link2" class="hidden">
-            <a href="https://drive.google.com/file/d/1PRsC6iB5kV0HF7ixvpaJ6drly34OjVxY/view?usp=sharing" target="_blank">Open
-              Drive Folder</a>
-          </div>
-        </div>
+    <!-- C Language Modules -->
+    <div class="resource-card">
+      <h3>Module 1: C Language</h3>
+      <input type="password" placeholder="Enter password" id="pass2-1">
+      <button onclick="checkPassword('pass2-1','link2-1')">Access Resource</button>
+      <div id="link2-1" class="hidden">
+        <a href="https://drive.google.com/drive/folders/YYY1" target="_blank">Open Drive Folder</a>
+      </div>
+    </div>
 
-        <div class="resource-card">
-          <h3>Module 2: C Language</h3>
-          <input type="password" placeholder="Enter password" id="pass2">
-          <button onclick="checkPassword('pass2', 'link2')">Access Resource</button>
-          <div id="link2" class="hidden">
-            <a href="https://drive.google.com/file/d/1fO9pufoWMjDG6NJlPzkPxDEkdvjMbIxf/view?usp=sharing" target="_blank">Open
-              Drive Folder</a>
-          </div>
-        </div>
+    <div class="resource-card">
+      <h3>Module 2: C Language</h3>
+      <input type="password" placeholder="Enter password" id="pass2-2">
+      <button onclick="checkPassword('pass2-2','link2-2')">Access Resource</button>
+      <div id="link2-2" class="hidden">
+        <a href="https://drive.google.com/drive/folders/YYY2" target="_blank">Open Drive Folder</a>
+      </div>
+    </div>
 
-        <div class="resource-card">
-          <h3>Module 3: C Language</h3>
-          <input type="password" placeholder="Enter password" id="pass2">
-          <button onclick="checkPassword('pass2', 'link2')">Access Resource</button>
-          <div id="link2" class="hidden">
-            <a href="https://drive.google.com/file/d/15baZ68pcNHCKip54oOKNy9ByuU-GbtEw/view?usp=sharing" target="_blank">Open
-              Drive Folder</a>
-          </div>
-        </div>
+    <div class="resource-card">
+      <h3>Module 3: C Language</h3>
+      <input type="password" placeholder="Enter password" id="pass2-3">
+      <button onclick="checkPassword('pass2-3','link2-3')">Access Resource</button>
+      <div id="link2-3" class="hidden">
+        <a href="https://drive.google.com/drive/folders/YYY3" target="_blank">Open Drive Folder</a>
+      </div>
+    </div>
 
-        <div class="resource-card">
-          <h3>Module 4: C Language</h3>
-          <input type="password" placeholder="Enter password" id="pass2">
-          <button onclick="checkPassword('pass2', 'link2')">Access Resource</button>
-          <div id="link2" class="hidden">
-            <a href="https://drive.google.com/file/d/1c6c0u8ztbps1OAG_RWWdb9y2Y7qMs_9R/view?usp=sharing" target="_blank">Open
-              Drive Folder</a>
-          </div>
-        </div>
-        <div class="resource-card">
-          <h3>Module 5: C Language</h3>
-          <input type="password" placeholder="Enter password" id="pass2">
-          <button onclick="checkPassword('pass2', 'link2')">Access Resource</button>
-          <div id="link2" class="hidden">
-            <a href="https://drive.google.com/file/d/1CApMaJYvngFjdruzTPHxDwt9mk_LL5lW/view?usp=sharing" target="_blank">Open
-              Drive Folder</a>
-          </div>
-        </div>
-        <div class="resource-card">
-          <h3>Module 6: C Language</h3>
-          <input type="password" placeholder="Enter password" id="pass2">
-          <button onclick="checkPassword('pass2', 'link2')">Access Resource</button>
-          <div id="link2" class="hidden">
-            <a href="https://drive.google.com/file/d/1vRS6PJjIQUdbnmVbP82OESh_znDZajwS/view?usp=sharing" target="_blank">Open
-              Drive Folder</a>
-          </div>
-        </div>
-        <div class="resource-card">
-          <h3>Module 7: C Language</h3>
-          <input type="password" placeholder="Enter password" id="pass2">
-          <button onclick="checkPassword('pass2', 'link2')">Access Resource</button>
-          <div id="link2" class="hidden">
-            <a href="https://drive.google.com/file/d/1MuXbqqZGUW-qxtThNJS-lsk0NzhddF4q/view?usp=sharing" target="_blank">Open
-              Drive Folder</a>
-          </div>
-        </div>
-        <div class="resource-card">
-          <h3>Module 8: C Language</h3>
-          <input type="password" placeholder="Enter password" id="pass2">
-          <button onclick="checkPassword('pass2', 'link2')">Access Resource</button>
-          <div id="link2" class="hidden">
-            <a href="https://drive.google.com/file/d/1wtk9wtB3h0jscAA1XJy-fxT5DayCq1pq/view?usp=sharing" target="_blank">Open
-              Drive Folder</a>
-          </div>
-        </div>
-        <div class="resource-card">
-          <h3>Module 9: C Language</h3>
-          <input type="password" placeholder="Enter password" id="pass2">
-          <button onclick="checkPassword('pass2', 'link2')">Access Resource</button>
-          <div id="link2" class="hidden">
-            <a href="https://drive.google.com/file/d/12zowVlzlcCZ6e5pwpm0kRPQWc8xvgK9V/view?usp=sharing" target="_blank">Open
-              Drive Folder</a>
-          </div>
-        </div>
-    </section>
+    <div class="resource-card">
+      <h3>Module 4: C Language</h3>
+      <input type="password" placeholder="Enter password" id="pass2-4">
+      <button onclick="checkPassword('pass2-4','link2-4')">Access Resource</button>
+      <div id="link2-4" class="hidden">
+        <a href="https://drive.google.com/drive/folders/YYY4" target="_blank">Open Drive Folder</a>
+      </div>
+    </div>
+
+    <div class="resource-card">
+      <h3>Module 5: C Language</h3>
+      <input type="password" placeholder="Enter password" id="pass2-5">
+      <button onclick="checkPassword('pass2-5','link2-5')">Access Resource</button>
+      <div id="link2-5" class="hidden">
+        <a href="https://drive.google.com/drive/folders/YYY5" target="_blank">Open Drive Folder</a>
+      </div>
+    </div>
+
+    <div class="resource-card">
+      <h3>Module 6: C Language</h3>
+      <input type="password" placeholder="Enter password" id="pass2-6">
+      <button onclick="checkPassword('pass2-6','link2-6')">Access Resource</button>
+      <div id="link2-6" class="hidden">
+        <a href="https://drive.google.com/drive/folders/YYY6" target="_blank">Open Drive Folder</a>
+      </div>
+    </div>
+
+    <div class="resource-card">
+      <h3>Module 7: C Language</h3>
+      <input type="password" placeholder="Enter password" id="pass2-7">
+      <button onclick="checkPassword('pass2-7','link2-7')">Access Resource</button>
+      <div id="link2-7" class="hidden">
+        <a href="https://drive.google.com/drive/folders/YYY7" target="_blank">Open Drive Folder</a>
+      </div>
+    </div>
+
+    <div class="resource-card">
+      <h3>Module 8: C Language</h3>
+      <input type="password" placeholder="Enter password" id="pass2-8">
+      <button onclick="checkPassword('pass2-8','link2-8')">Access Resource</button>
+      <div id="link2-8" class="hidden">
+        <a href="https://drive.google.com/drive/folders/YYY8" target="_blank">Open Drive Folder</a>
+      </div>
+    </div>
+
+    <div class="resource-card">
+      <h3>Module 9: C Language</h3>
+      <input type="password" placeholder="Enter password" id="pass2-9">
+      <button onclick="checkPassword('pass2-9','link2-9')">Access Resource</button>
+      <div id="link2-9" class="hidden">
+        <a href="https://drive.google.com/drive/folders/YYY9" target="_blank">Open Drive Folder</a>
+      </div>
+    </div>
   </div>
 </section>
-
     
 
     <!-- LOGIN/AUTHENTICATION SECTION -->
